# IOT-Backend

./: .gitignore  BUILD.bazel  MODULE.bazel  config.yaml  docker-compose.yaml  go.mod  go.sum  main.go
cmd/iot/: BUILD.bazel  main.go
config/: BUILD.bazel  config.go  config.yaml
db/: BUILD  db.go
handler/: BUILD.bazel  coordinators.go  handler.go  sites.go
handlers/: BUILD.bazel  handlers.go
http/: BUILD.bazel  handler.go  module.go  server.go
internal/config/: BUILD.bazel  config.go  config.yaml
internal/db/: BUILD  db.go
internal/http/: BUILD.bazel  handler.go  handlers.go  http.go  server.go
internal/mqtt/: BUILD.bazel  client.go  handler.go  mqtt.go
internal/repository/: BUILD.bazel  mongo.go  repository.go
internal/types/: BUILD
mqtt/: BUILD.bazel  client.go  handler.go  module.go  mqtt.go
repository/: BUILD.bazel  repository.go  sites.go
types/: BUILD  types.go
