load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "handler.go",
        "sites.go",
    ],
    importpath = "github.com/IOT-Backend/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//repository",
        "@com_github_gorilla_mux//:mux",
        "@org_uber_go_fx//:fx",
    ],
)
