load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "repository.go",
        "sites.go",
    ],
    importpath = "github.com/IOT-Backend/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_uber_go_fx//:fx",
    ],
)
