load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "commands.go",
        "repository.go",
        "sites.go",
    ],
    importpath = "github.com/IOT-Backend/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
